RESOLVED FIXED226955
Number pad button is missing its image when tapping on <input type=tel> in watchOS 8
https://bugs.webkit.org/show_bug.cgi?id=226955
Summary Number pad button is missing its image when tapping on <input type=tel> in wa...
Wenson Hsieh
Reported 2021-06-12 11:50:24 PDT
.
Attachments
For EWS (3.52 KB, patch)
2021-06-12 11:56 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Fix watchOS 7 build (4.79 KB, patch)
2021-06-12 12:30 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Fix watchOS 7 build (2) (4.79 KB, patch)
2021-06-12 12:43 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Wenson Hsieh
Comment 1 2021-06-12 11:56:25 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2021-06-12 12:30:45 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2021-06-12 12:43:29 PDT
Created attachment 431263 [details] Fix watchOS 7 build (2)
Darin Adler
Comment 4 2021-06-12 14:07:39 PDT
Comment on attachment 431263 [details] Fix watchOS 7 build (2) View in context: https://bugs.webkit.org/attachment.cgi?id=431263&action=review > Source/WebKit/UIProcess/ios/forms/WKTextInputListViewController.mm:-67 > - UIImage *numberPadButtonIcon = [PUICResources imageNamed:@"QuickboardAddPhoneNumber" inBundle:[NSBundle bundleWithIdentifier:@"com.apple.PepperUICore"] shouldCache:YES]; So this is not needed on older builds with !HAVE(PUIC_BUTTON_TYPE_PILL)?
Wenson Hsieh
Comment 5 2021-06-12 14:11:06 PDT
Comment on attachment 431263 [details] Fix watchOS 7 build (2) View in context: https://bugs.webkit.org/attachment.cgi?id=431263&action=review Thanks for the review! >> Source/WebKit/UIProcess/ios/forms/WKTextInputListViewController.mm:-67 >> - UIImage *numberPadButtonIcon = [PUICResources imageNamed:@"QuickboardAddPhoneNumber" inBundle:[NSBundle bundleWithIdentifier:@"com.apple.PepperUICore"] shouldCache:YES]; > > So this is not needed on older builds with !HAVE(PUIC_BUTTON_TYPE_PILL)? Yes — setting the Quickboard action type obviates the need for specifying this icon image on both watchOS 7+.
EWS
Comment 6 2021-06-12 14:45:38 PDT
Committed r278815 (238768@main): <https://commits.webkit.org/238768@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431263 [details].
Radar WebKit Bug Importer
Comment 7 2021-06-12 14:46:20 PDT
Note You need to log in before you can comment on or make changes to this bug.