Number pad button is missing its image when tapping on <input type=tel> in watchOS 8 https://bugs.webkit.org/show_bug.cgi?id=226955

Reviewed by Darin Adler.

Source/WebKit:

After some recent PepperUICore changes, the Quickboard button for presenting the number pad when focusing a
telephone input on watchOS 8 is missing its icon image. To fix this, stop using deprecated SPI for creating
the list tray button, and instead use `+[PUICQuickboardListTrayButton buttonWithType:]` and `-setAction:` to
create and set up the button.

* Platform/spi/watchos/PepperUICoreSPI.h:
* UIProcess/ios/forms/WKTextInputListViewController.mm:
(-[WKTextInputListViewController additionalTrayButtons]):

Source/WTF:

Add compile-time flags to guard the presence of `PUICQuickboardController` and `PUICButtonTypePill`.

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/238768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278815 268f45cc-cd09-0410-ab3c-d52691b4dbfc